--- a/ElectronApi.Json.Parser/ElectronApi.Json.Parser.fsproj
+++ b/ElectronApi.Json.Parser/ElectronApi.Json.Parser.fsproj
@@ -14,4 +14,8 @@
       <PackageReference Include="Thoth.Json.Net" Version="12.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include=".github\workflows\build-docs.yml" />
+    </ItemGroup>
+
 </Project>
