--- a/ElectronApi.Json.Parser/ElectronApi.Json.Parser.fsproj
+++ b/ElectronApi.Json.Parser/ElectronApi.Json.Parser.fsproj
@@ -2,15 +2,20 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Utils.fs" />
         <Compile Include="ApiDecoder.fs" />
         <Compile Include="FSharpApi.fs" />
+        <Compile Include="Fantomas.Utils.fs" />
+        <Compile Include="SourceMapper.fs" />
+        <None Include="FSharpApi.Tests.fsx" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Fantomas.Core" Version="7.0.3" />
       <PackageReference Include="Thoth.Json.Net" Version="12.0.0" />
     </ItemGroup>
 
