--- a/ElectronApi.Json.Parser/ElectronApi.Json.Parser.fsproj
+++ b/ElectronApi.Json.Parser/ElectronApi.Json.Parser.fsproj
@@ -6,12 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Spec.fs" />
         <Compile Include="Utils.fs" />
         <Compile Include="ApiDecoder.fs" />
         <Compile Include="Types.fs" />
         <Compile Include="FSharpApi.fs" />
         <Compile Include="Fantomas.Utils.fs" />
         <Compile Include="SourceMapper.fs" />
+        <Compile Include="Generator.fs" />
         <None Include="FSharpApi.Tests.fsx" />
     </ItemGroup>
 
