--- a/ElectronApi.Json.Parser.Tests/ElectronApi.Json.Parser.Tests.fsproj
+++ b/ElectronApi.Json.Parser.Tests/ElectronApi.Json.Parser.Tests.fsproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <GenerateProgramFile>false</GenerateProgramFile>
         <IsTestProject>true</IsTestProject>
+        <DefineConstants>ELECTRON_OS_MAC</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,6 +17,8 @@
     <ItemGroup>
         <PackageReference Include="EasyBuild.FileSystemProvider" Version="1.1.0" />
         <PackageReference Include="Expecto" Version="10.*"/>
+        <PackageReference Include="Fable.Browser.Dom" Version="2.20.0" />
+        <PackageReference Include="Fable.Core" Version="5.0.0-beta.1" />
         <PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.15.*"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*"/>
         <PackageReference Update="FSharp.Core" Version="8.*"/>
