--- a/ElectronApi.Json.Parser/ElectronApi.Json.Parser.fsproj
+++ b/ElectronApi.Json.Parser/ElectronApi.Json.Parser.fsproj
@@ -6,11 +6,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="ApiDecoder.fs" />
         <Compile Include="Spec.fs" />
         <Compile Include="Utils.fs" />
-        <Compile Include="ApiDecoder.fs" />
         <Compile Include="Types.fs" />
-        <Compile Include="FSharpApi.fs" />
+        <Compile Include="Prelude.fs" />
         <Compile Include="Fantomas.Utils.fs" />
         <Compile Include="SourceMapper.fs" />
         <Compile Include="Generator.fs" />
